Version History
--------------

0.1.4
- updated targetSDK to 35
- updated Kotlin Version

0.1.3
- added new D4 dice skins
- bug fixing

0.1.2
- fixed score display bug
- added white D4 dice
- moved Delete All button to Dice Menu
- Score and Set Menu are now only visible with added dice
- changed Dice Menu UI
- changed button styles
- added Main Menu (dummy only, not usable)
- added content description to dice items on screen

0.1.1
- added dice maximum of 30 dice
- added app start icon
- score view optimized
- dice in grid view are now scalable